<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JPA-Fretamento</groupId>
  <artifactId>JPA-Fretamento</artifactId>
  <version>0.0.1-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
       <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
		<version>3.14.1</version>
      </plugin>
    </plugins>
  </build>
  
  	<dependencies>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
    		<artifactId>hibernate-core</artifactId>
    		<version>7.3.2.Final</version> 
    	</dependency>
		<dependency>
    		<groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
    		<version>42.7.10</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>9.7.0</version>
		</dependency>
		
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
   			<version>2.25.0</version>
		</dependency>
	</dependencies>
</project>